fixed abbreviation not showing up in ticket.component.ts

--- a/src/app/moderator/overview/overview.component.scss
+++ b/src/app/moderator/overview/overview.component.scss
@@ -24,3 +24,11 @@ table{
     }
   }
 }
+
+.container.overview-header {
+  font-weight: bold;
+  font-size: 18px;
+  padding-bottom: 5px;
+  margin-bottom: 5px;
+  border-bottom: black solid 1px;
+}
